--- a/Build a word viewer!/index.html
+++ b/Build a word viewer!/index.html
@@ -13,11 +13,43 @@
     </style>
   </head>
   <body>
-    <h1>&lt;word-viewer> examples:</h1>
+    <p>Click the bouncing ball!</p>
+<word-viewer words='   █
 
-    <word-viewer words="Passing.in.some.words!"></word-viewer>
-    <word-viewer words="😃.😁.😂.🤣.🤪.😛.😋.🙂"></word-viewer>
-    <span>Add your own here...</span>
 
+
+_______1.   ▇
+
+
+
+_______2.   ▍
+   ▊
+   ▍
+
+_______3.
+
+   
+   ▍
+__▃█▃__4.
+
+   
+   
+_▂▃▄▃▂_5.
+   ▍
+   ▍
+   ▍
+___▍___6.   ▊
+   ▍
+
+
+_______7.   ▇
+
+
+
+_______8.   █
+
+
+
+_______9'></word-viewer>
   </body>
 </html>
